--- a/HOLJup.ipynb
+++ b/HOLJup.ipynb
@@ -85,7 +85,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clone the deepmath repository"
+    "## Clone the deepmath repository  \n",
+    "Clone the modified deepmath repo and move this notebook into the repository."
    ]
   },
   {
@@ -94,8 +95,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: Update this Repository to include the HolJup files\n",
-    "!git clone https://github.com/tensorflow/deepmath.git"
+    "%%bash\n",
+    "git clone https://github.com/aahadley/deepmath-jupyter\n",
+    "cd deepmath-jupyter && mv ../HOLJup.ipynb ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now refresh this notebook."
    ]
   },
   {
@@ -324,14 +333,14 @@
     "    # failing sibling nodes.\n",
     "    tree.cur_index = 0\n",
     "    while not self.timed_out() and not root.closed and not root.failed and (\n",
-    "        nodes_explored < self.options.max_explored_nodes):\n",
-    "      if tree.cur_index >= len(tree.nodes):\n",
-    "        return 'BFS: All nodes are failed or ignored.'\n",
-    "      node = tree.nodes[tree.cur_index]\n",
-    "      tree.cur_index += 1\n",
-    "      if node.ignore or node.failed or node.closed or node.processed:\n",
-    "        continue\n",
-    "      nodes_explored += 1\n",
+    "            nodes_explored < self.options.max_explored_nodes):\n",
+    "        if tree.cur_index >= len(tree.nodes):\n",
+    "            return 'BFS: All nodes are failed or ignored.'\n",
+    "        node = tree.nodes[tree.cur_index]\n",
+    "        tree.cur_index += 1\n",
+    "        if node.ignore or node.failed or node.closed or node.processed:\n",
+    "            continue\n",
+    "        nodes_explored += 1\n",
     "      # Note that the following function might change tree.cur_index\n",
     "      # (if a node that was ignored suddenly becomes subgoal of a new\n",
     "      # tactic application).\n",
@@ -346,11 +355,11 @@
     "    tf.logging.info('Timeout: %s root status: %s explored: %d',\n",
     "                    str(self.timed_out()), root_status, nodes_explored)\n",
     "    if self.timed_out():\n",
-    "      return 'BFS: Timeout.'\n",
+    "        return 'BFS: Timeout.'\n",
     "    elif root.failed:\n",
-    "      return 'BFS: Root Failed.'\n",
+    "        return 'BFS: Root Failed.'\n",
     "    elif nodes_explored >= self.options.max_explored_nodes and not root.closed:\n",
-    "      return 'BFS: Node limit reached.'"
+    "        return 'BFS: Node limit reached.'"
    ]
   },
   {
@@ -688,7 +697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
