Expanded notebook documentation

--- a/HOLJup.ipynb
+++ b/HOLJup.ipynb
@@ -7,10 +7,18 @@
     "# Contents\n",
     "* [Introduction](#Introduction)\n",
     "* [Installation](#Installation)\n",
+    "    * [Environment](#Setting-up-your-virtual-environment)\n",
+    "    * [Bazel](#Install-Bazel)\n",
+    "    * [Build](#Build-tensorflow-with-Bazel)\n",
+    "    * [Run DeepHOL](#Run-deephol)\n",
+    "* [Configuration](#Configuration)\n",
     "* [Prover](#Prover)\n",
     "    * [Prover Class]()\n",
     "    * [Custom Constructor]()\n",
     "    * [Single-Task Prover]()\n",
+    "* [Model Architecture](#Model-Architecture)\n",
+    "    * [Logistic Regression](#Logistic-regression-on-top-of-learned-token-embeddings.)\n",
+    "    * [2-layer-CNN](#2-layer-1D-convolutional-neural-network)\n",
     "* [Selection Strategies](#Selection-Strategies)\n",
     "    * [Predictions Class](#Attributes)\n",
     "    * [Goal Embedding](#Goal-Embedding)\n",
@@ -22,7 +30,7 @@
     "    * [Premise Selection](#Premise-Selection)\n",
     "* [Related Work](#Related-Work)  \n",
     "\n",
-    "[Run](#Run-DeepHol)\n",
+    "[Run](#Run-DeepHOL)\n",
     "\n",
     "---\n",
     "---\n",
@@ -34,7 +42,8 @@
    "metadata": {},
    "source": [
     "# Introduction  \n",
-    "\n",
+    "  \n",
+    "  \n",
     "## How to Use This Notebook  \n",
     "First, follow the instructions below to install deephol in the same directory as this notebook.  \n",
     "\n",
@@ -62,7 +71,8 @@
    "metadata": {},
    "source": [
     "# Building from source\n",
-    "Follow this guide if you want to build on your local machine without using the container.\n",
+    "Follow this guide if you want to build on your local machine without using the container.  \n",
+    "\n",
     "\n",
     "## Setting up your virtual environment\n",
     "Create and activate a conda environment."
@@ -104,7 +114,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now refresh this notebook."
+    "Now refresh this notebook.  \n",
+    "  \n",
+    "  "
    ]
   },
   {
@@ -124,7 +136,7 @@
     "%%bash\n",
     "wget https://github.com/bazelbuild/bazel/releases/download/0.21.0/bazel-0.21.0-installer-linux-x86_64.sh\n",
     "chmod 777 bazel-0.21.0-installer-linux-x86_64.sh\n",
-    "bash bazel-0.21.0-installer-linux-x86_64.sh --prefix=$HOME/bazel\n",
+    "bash bazel-0.21.0-installer-linux-x86_64.sh --prefix=$HOME/bazel --user\n",
     "PATH=$HOME/bazel/bin:$PATH"
    ]
   },
@@ -162,7 +174,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "export $PYTHON_BIN_PATH=<path given by tensorflow>"
+    "export $PYTHON_BIN_PATH=$(which python)"
    ]
   },
   {
@@ -200,7 +212,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!docker network create holist_net"
+    "%%bash\n",
+    "docker network create holist_net"
    ]
   },
   {
@@ -216,7 +229,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!docker run -d --network=holist_net --name=holist gcr.io/deepmath/hol-light"
+    "%%bash\n",
+    "docker run -d --network=holist_net --name=holist gcr.io/deepmath/hol-light"
    ]
   },
   {
@@ -232,7 +246,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!docker network inspect holist_net"
+    "%%bash\n",
+    "docker network inspect holist_net"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or store it with"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "export HNET_IP=\"$(sudo docker inspect --format='{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' holist)\""
    ]
   },
   {
@@ -248,7 +280,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "python bazel-bin/deepmath/deephol/main --prover_options=data/configuration/prover_options.textpb --output=proof_logs.textpbs --proof_assistant_server_address=<ip of proof assistant>"
+    "%%bash\n",
+    "\n",
+    "python bazel-bin/deepmath/deephol/main --prover_options=data/configuration/prover_options.textpb --output=proof_logs.textpbs --proof_assistant_server_address=$HNET_IP:2000"
    ]
   },
   {
@@ -256,7 +290,7 @@
    "metadata": {},
    "source": [
     "## Verify using the proof checker\n",
-    "//TODO"
+    "You can expect some errors in the generated proofs, so you'll need to check them with HOL-Light.  "
    ]
   },
   {
@@ -265,7 +299,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "//TODO"
+    "%%bash \n",
+    "\n",
+    "python bazel-bin/deepmath/deephol/utilities/proof_checker --theorem_database=/data/theorem_database_v1.1.textpb \\ \n",
+    "--proof_logs=data/proof_logs.textpbs \\ \n",
+    "--out_file=data/synthetic_proofs.ml\n",
+    "\n",
+    "cp data/proof_logs.textpbs ../hol-light\n",
+    "cd ..\n",
+    "docker build -f hol-light/Dockerfile_check_proofs --ulimit stack=1000000000 --tag check_proofs hol-light/\n",
+    "docker run check_proofs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Configuration\n",
+    "Configuration options can be found in `deepmath/data/configuration/prover_options.textpb`. Available configuration options are determined by `deepmath/deephol/deephol.proto`. Whenever changes are made to `deephol.proto`, it must be compiled with: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash \n",
+    "\n",
+    "python -m grpc_tools.protoc -I. --python_out=bazel-genfiles/deepmath/deephol/ deepmath/deephol/deephol.proto"
    ]
   },
   {
@@ -276,8 +338,15 @@
     "---\n",
     "---\n",
     "# Prover\n",
-    "//TODO  \n",
-    "By default, deephol will use the BFS prover defined in `prover.py`. You can use these methods to implement your own\n",
+    "The task of proving a theorem is generally thought of as a tree search, where the root of\n",
+    "the tree is a theorem to be proved, and each leaf node corresponds to an applied tactic.\n",
+    "The Prover object is responsible for implementing the proof search. The default option in\n",
+    "DeepHOL is a breadth-first search, and DeepHOL also implements a no-backtracking search for\n",
+    "comparison. Other works have implemented different search algorithms for theorem proving\n",
+    "such as Monte-Carlo search.\n",
+    "\n",
+    "\n",
+    "Implementing a new prover in DeepHOL requires implementing a new subclass of the Prover class. All that is needed for this is to implement a custom constructor if needed, and the `prove_one` method, which takes a proof search tree, and a ProverTask as parameters, and return None when a proof is found, or an error message if the search fails. Example implementations can be found in [prover.py](https://github.com/tensorflow/deepmath/blob/master/deepmath/deephol/prover.py).\n",
     "\n",
     "## Custom Constructor\n",
     "If your prover needs a custom `__init__()`, you can implement it here.  \n",
@@ -366,10 +435,123 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Selection Strategies\n",
+    "# Model Architecture\n",
     "\n",
-    "## Attributes\n",
-    "A few words about the class attributes that don't need to be implemented.\n"
+    "**These models are developed for the task of premise selection:**\n",
+    "**classifying proof step statements as being useful or not in the context of a given proof**\n",
+    "\n",
+    "• Unconditioned classification of proof steps: determining how likely a given proof is to be\n",
+    "useful for the proof it occurred in, based solely on the content of statement (i.e. by only\n",
+    "providing the model with the step statement itself, absent any context).\n",
+    "\n",
+    "• Conditioned classification of proof steps: determining how likely a given proof is to be\n",
+    "useful for the proof it occurred in, with “conditioning” on the conjecture statement that the\n",
+    "proof was aiming to attain, i.e. by providing the model with both the step statement and the\n",
+    "conjecture statement).\n",
+    "\n",
+    "## Logistic regression on top of learned token embeddings. \n",
+    "This minimal model aims to determine to which extent simple differences between token distribution between useful and non-useful statements can be used to distinguish them. It provides an absolute floor on the performance achievable on this task."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile deepmath/deephol/jup_predict/custom/conditioned_model.py\n",
+    "\n",
+    "\"\"\"Models for classifying proof steps with conditioning on the conjecture.\"\"\"\n",
+    "\n",
+    "\n",
+    "###### your code below #####\n",
+    "\n",
+    "def embedding_logreg_siamese(voc_size, max_len, dropout=0.5):\n",
+    "      \"\"\"Two siamese branches, each embedding a statement.\n",
+    "      Binary classifier on top.\n",
+    "      Args:\n",
+    "        voc_size: size of the vocabulary for the input statements.\n",
+    "        max_len: maximum length for the input statements.\n",
+    "        dropout: Fraction of units to drop.\n",
+    "      Returns:\n",
+    "        A Keras model instance.\n",
+    "      \"\"\"\n",
+    "    pivot_input = layers.Input(shape=(max_len,), dtype='int32')\n",
+    "    statement_input = layers.Input(shape=(max_len,), dtype='int32')\n",
+    "\n",
+    "    x = layers.Embedding(\n",
+    "      output_dim=256,\n",
+    "      input_dim=voc_size,\n",
+    "      input_length=max_len)(pivot_input)\n",
+    "    x = layers.Activation('relu')(x)\n",
+    "    embedded_pivot = layers.Flatten()(x)\n",
+    "\n",
+    "    encoder_model = Model(pivot_input, embedded_pivot)\n",
+    "    embedded_statement = encoder_model(statement_input)\n",
+    "\n",
+    "    concat = layers.merge([embedded_pivot, embedded_statement], mode='concat')\n",
+    "    x = layers.Dropout(dropout)(concat)\n",
+    "    prediction = layers.Dense(1, activation='sigmoid')(x)\n",
+    "\n",
+    "    model = Model([pivot_input, statement_input], prediction)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2-layer 1D convolutional neural network \n",
+    "***(CNN) with global maxpooling for sequence reduction. This model aims to determine the importance of local patterns of tokens.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile deepmath/deephol/jup_predict/custom/unconditioned_model.py\n",
+    "\n",
+    "\"\"\"Models for classifying proof steps without conditioning on the conjecture.\"\"\"\n",
+    "\n",
+    "###### your code below #####\n",
+    "\n",
+    "def cnn_2x(voc_size, max_len, dropout=0.5):\n",
+    "    \"\"\"One branch embedding a statement. Binary classifier on top.\n",
+    "      Args:\n",
+    "        voc_size: size of the vocabulary for the input statements.\n",
+    "        max_len: maximum length for the input statements.\n",
+    "        dropout: Fraction of units to drop.\n",
+    "      Returns:\n",
+    "        A Keras model instance.\n",
+    "      \"\"\"\n",
+    "    statement_input = layers.Input(shape=(max_len,), dtype='int32')\n",
+    "\n",
+    "    x = layers.Embedding(\n",
+    "      output_dim=256,\n",
+    "      input_dim=voc_size,\n",
+    "      input_length=max_len)(statement_input)\n",
+    "    x = layers.Convolution1D(256, 7, activation='relu')(x)\n",
+    "    x = layers.MaxPooling1D(3)(x)\n",
+    "    x = layers.Convolution1D(256, 7, activation='relu')(x)\n",
+    "    embedded_statement = layers.GlobalMaxPooling1D()(x)\n",
+    "\n",
+    "    x = layers.Dense(256, activation='relu')(embedded_statement)\n",
+    "    x = layers.Dropout(dropout)(x)\n",
+    "    prediction = layers.Dense(1, activation='sigmoid')(x)\n",
+    "    model = Model(statement_input, prediction)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Selection Strategies\n",
+    "The action generator is responsible for building the search tree by choosing tactics to apply, and selecting premises. This task is where the advantages of machine learning can be realized. The action generator allows us to intelligently choose tactics and theorems to apply to our goals, greatly narrowing our search space. \n",
+    "\n",
+    "Tactic scoring and premise selection are handled by the abstract `Predictions` class located in [predictions.py](https://github.com/tensorflow/deepmath/blob/master/deepmath/deephol/predictions.py). New predictors can be implemented by subclassing the `Predictions` class, and implementing the following abstract methods.\n"
    ]
   },
   {
@@ -394,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,17 +738,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting deepmath/deephol/jup_predict/custom/tac_sc.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile deepmath/deephol/jup_predict/custom/tac_sc.py\n",
     "\n",
@@ -640,7 +814,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run DeepHol"
+    "# Run DeepHOL"
    ]
   },
   {
@@ -649,7 +823,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!bash run.sh"
+    "%%bash\n",
+    "\n",
+    "python bazel-bin/deepmath/deephol/main --prover_options=data/configuration/prover_options.textpb --output=proof_logs.textpbs --proof_assistant_server_address=$HNET_IP:2000"
    ]
   },
   {
@@ -677,7 +853,12 @@
     "* Aaron Hadley: aahadley1@gmail.com\n",
     "* Tyler McFadden: neruelin@gmail.com\n",
     "* Jordan Starkey: jordanstarkey95@gmail.com\n",
-    "* Sumit Jha: Sumit.Jha@ucf.edu"
+    "* Sumit Jha: Sumit.Jha@ucf.edu  \n",
+    "\n",
+    "# Acknowledgements\n",
+    "We are especially thankful to the following individuals, who have been incredibly responsive and helpful in answering questions throughout this project.  \n",
+    "\n",
+    "*Dr. Christian Szegedy, Dr. Sarah Loos, Kaiyu Yang, Dr. Jason Rute*"
    ]
   }
  ],
@@ -697,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
