found a nasty sudo

--- a/HOLJup.ipynb
+++ b/HOLJup.ipynb
@@ -264,7 +264,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "export HNET_IP=\"$(sudo docker inspect --format='{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' holist)\""
+    "export HNET_IP=\"$(docker inspect --format='{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' holist)\""
    ]
   },
   {
