added missing writefile

--- a/HOLJup.ipynb
+++ b/HOLJup.ipynb
@@ -381,6 +381,7 @@
    ]
   },
   {
+   "%%writefile deepmath/deephol/jup_prover/custom/prover.py\n"
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
